确保线程安全